crates/math-core/tests/snapshots/conversion_test__int_prime.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\int'"
---
<math>
    <msup>
        <mo lspace="0" rspace="0">∫</mo>
        <mo>′</mo>
    </msup>
</math>
