crates/math-core/tests/snapshots/conversion_test__integer.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "0"
---
<math>
    <mn>0</mn>
</math>
