crates/math-core/tests/snapshots/conversion_test__integral_mixed_limits_2.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\int\\nolimits_0\\limits^1\\displaylimits dx"
---
<math>
    <munderover>
        <mo movablelimits="true" lspace="0">∫</mo>
        <mn>0</mn>
        <mn>1</mn>
    </munderover>
    <mi>d</mi>
    <mi>x</mi>
</math>
