crates/math-core/tests/snapshots/conversion_test__integral_pointless_limits.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\int\\limits dx"
---
<math>
    <mo lspace="0">∫</mo>
    <mi>d</mi>
    <mi>x</mi>
</math>
