crates/math-core/tests/snapshots/conversion_test__integral_with_complex_bound.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\int_{0+1}^\\infty"
---
<math>
    <msubsup>
        <mo lspace="0" rspace="0">∫</mo>
        <mrow>
            <mn>0</mn>
            <mo lspace="0" rspace="0">+</mo>
            <mn>1</mn>
        </mrow>
        <mi>∞</mi>
    </msubsup>
</math>
